New in spot 2.6.2.dev (not yet released)

  Bugs fixed:

  - Running "ltl2tgba -B" on formulas of the type FG(safety) would
    unexpectedly use a co-Büchi automaton as an intermediate step.
    This in turn caused "ltl2tgba -U -B" to not produce unambiguous
    automata.

  - ltl2tgba --low now disables the "gf-guarantee" feature, as
    documented.

New in spot 2.6.2 (2018-09-28)

  Build:

  - We no longer distribute the Python-based CGI script + javascript
    code for the online translator.  Its replacement has its own
    repository: https://gitlab.lrde.epita.fr/spot/spot-web-app/

  Library:

  - When states are highlighted with more than 8 colors, print_dot()
    will add some extra markers to help distinguishing the colors.
    This helps with the fact that colors 8-15 are lighter versions of
    colors 0-7, and that higher color numbers cycle into this 16-color
    palette.

  Bugs fixed:

  - exclusive_ap::constrain() (called by autfilt --exclusive-ap=...)
    would incorrectly copy the "universal" property of the input
    automaton, causing print_hoa() to fail.

  - configure --disable-doxygen would actually enable it.

  - Fix several warnings emited by the development version of GCC.

New in spot 2.6.1  (2018-08-04)

  Command-line tools:

  - "ltlfilt --suspendable" is now a synonym for
    "ltlfilt --universal --eventual".

  Bugs fixed:

  - scc_info::split_on_sets() did not correctly register the
    atomic propositions of the returned automata.

  - The spot::tl_simplifier class could raise an exception while
    attempting to reduce formulas containing unsimplified <->, -> or
    xor, if options nenoform_stop_on_boolean and synt_impl are both
    set.  (This combination of options is not available from
    command-line tools.)

  - The spot::contains(a, b) function introduced in 2.6 was testing
    a⊆b instead of a⊇b as one would expect.  Infortunately the
    documentation was also matching the code, so this is a backward