@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2016, 2017 Laboratoire de Recherche et Développement
+# Copyright (C) 2016, 2017, 2018 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -137,3 +137,7 @@ done
 ltl2tgba -G -D 'FGa' | autfilt --highlight-word='cycle{a}' 2>stderr && exit 1
 test $? -eq 2
 grep 'highlight-word.*Fin' stderr
+
+
+ltlfilt -f 'GFa' --accept-word 'cycle{!a}' && exit 1
+ltlfilt -f 'GF!a' --accept-word 'cycle{!a}'
